# PaperPuller

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily.yml
config/: CHATGPT_PROMPT.md  interest.md  interest.template.md  paperpuller.yaml
docs/superpowers/specs/: 2026-06-01-paperpuller-design.md  2026-06-03-generalize-paperpuller-design.md
paperpuller/: arxiv_client.py  cli.py  config.py  database.py  emailer.py  llm.py  models.py  pipeline.py  report.py  tags.py
scripts/: run_daily.ps1  run_daily.sh
tests/: test_arxiv_client.py  test_config.py  test_database.py  test_llm.py  test_report.py
