[project]
name = "paperpuller"
version = "0.1.0"
description = "Daily arXiv paper puller for OCR, STR, ViT, MAE, and data augmentation papers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
paperpuller = "paperpuller.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["paperpuller*"]
